# component-odoo

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.claude/: component-factory-setup.sh  settings.json
.github/workflows/: extractor.yml  push.yml  writer.yml
component_config/: component_long_description.md  component_short_description.md  configSchema.json  licenseUrl.md  sourceCodeUrl.md
extractor/: Dockerfile
extractor/component_config/: actions.md  component_short_description.md  configRowSchema.json  configSchema.json  documentationUrl.md  licenseUrl.md
extractor/src/: component.py  configuration.py  extractor_component.py
scripts/: build_n_test.sh  setup_odoo_test.py
scripts/developer_portal/: fn_actions_md_update.sh  update_properties.sh
src/: component.py  configuration.py  odoo_client.py
src/clients/: json2_client.py  xmlrpc_client.py
tests/: conftest.py  test_component.py  test_configuration_extended.py  test_json2_client.py  test_run_e2e.py  test_state.py  test_writer_component.py  test_xmlrpc_client.py
tests/extractor/: test_component.py  test_configuration_extended.py  test_extractor_component.py  test_run_e2e.py  test_state.py  test_write_csv.py
tests/integration/: conftest.py  test_extractor_integration.py  test_writer_integration.py
tests/shared/: test_json2_client.py  test_xmlrpc_client.py
tests/writer/: test_writer_component.py
writer/: Dockerfile
writer/component_config/: actions.md  component_long_description.md  component_short_description.md  configRowSchema.json  configSchema.json  documentationUrl.md  licenseUrl.md  loggerConfiguration.json  sourceCodeUrl.md
writer/src/: writer_component.py  writer_configuration.py
