[project]
name = "odoo-extractor"
dynamic = ["version"]
readme = "README.md"
requires-python = "~=3.13.0"
dependencies = [
    "freezegun>=1.5.1",
    "keboola-component>=1.6.10",
    "keboola-http-client>=1.0.1",
    "keboola-utils>=1.1.0",
    "mock>=5.2.0",
    "pydantic>=2.11.3",
]

[dependency-groups]
dev = [
    "flake8>=7.2.0",
    "pre-commit>=4.5.0",
    "ruff>=0.11.5",
]

[tool.ruff]
line-length = 120
